crates/cli/tests/snapshots/snapshot_tests__review_github_envelope.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
{
  "event": "COMMENT",
  "body": "### Plow dead-code report\n\n27 inline findings selected for GitHub review.\n\n<!-- plow-review -->\n\n<!-- plow-fingerprint:v2: 5e7b5a47bc47cafe -->",
  "summary": {
    "body": "### Plow dead-code report\n\n27 inline findings selected for GitHub review.\n\n<!-- plow-review -->\n\n<!-- plow-fingerprint:v2: 5e7b5a47bc47cafe -->",
    "fingerprint": "5e7b5a47bc47cafe"
  },
  "comments": [
    {
      "path": "app/components/index.ts",
      "line": 2,
      "side": "RIGHT",
      "body": "**warn** `plow/mixed-client-server-barrel`: Barrel re-exports both a \"use client\" module \\(\\`./Button\\`\\) and a server-only module \\(\\`./fetchUser\\`\\); one import drags the other's directive across the boundary\n\n<!-- plow-fingerprint:v2: a26a1cc5a4e57127 -->",
      "fingerprint": "a26a1cc5a4e57127"
    },
    {
      "path": "app/page.tsx",
      "line": 3,
      "side": "RIGHT",
      "body": "**warn** `plow/invalid-client-export`: Export \\`metadata\\` is not allowed in a \"use client\" file \\(Next.js server-only / route-config name\\)\n\n<!-- plow-fingerprint:v2: 81283760fca75e0c -->",
      "fingerprint": "81283760fca75e0c"
    },
    {
      "path": "package.json",
      "line": 3,
      "side": "RIGHT",
      "body": "**error** `plow/misconfigured-dependency-override`: Override \\`@types/react@\\<\\<18\\` -\\> \\`18.0.0\\` is malformed: override key cannot be parsed\n\n<!-- plow-fingerprint:v2: 6c6967f2a0a29fc8 -->",
      "fingerprint": "6c6967f2a0a29fc8"
    },
    {
      "path": "package.json",
      "line": 5,
      "side": "RIGHT",
      "body": "**warn** `plow/unused-optional-dependency`: Package 'fsevents' is in optionalDependencies but never imported\n\n**warn** `plow/unused-dev-dependency`: Package 'jest' is in devDependencies but never imported\n\n**error** `plow/unused-dependency`: Package 'lodash' is in dependencies but never imported\n\n<!-- plow-fingerprint:v2: merged:4fc2bf7e7287da2b -->",
      "fingerprint": "merged:4fc2bf7e7287da2b"
    },
    {
      "path": "package.json",
      "line": 8,
      "side": "RIGHT",
      "body": "**warn** `plow/type-only-dependency`: Package 'zod' is only imported via type-only imports \\(consider moving to devDependencies\\)\n\n<!-- plow-fingerprint:v2: 3d74179acf41bda0 -->",
      "fingerprint": "3d74179acf41bda0"
    },
    {
      "path": "package.json",
      "line": 12,
      "side": "RIGHT",
      "body": "**warn** `plow/test-only-dependency`: Package 'msw' is only imported by test files \\(consider moving to devDependencies\\)\n\n<!-- plow-fingerprint:v2: 8c337e042e8095c8 -->",
      "fingerprint": "8c337e042e8095c8"
    },
    {
      "path": "packages/app/package.json",
      "line": 14,
      "side": "RIGHT",
      "body": "**error** `plow/unresolved-catalog-reference`: Package 'old-react' is referenced via \\`catalog:react17\\` but catalog 'react17' does not declare it; \\`pnpm install\\` will fail \\(available in: react18\\)\n\n<!-- plow-fingerprint:v2: 5deef6f1aba529f1 -->",
      "fingerprint": "5deef6f1aba529f1"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 6,
      "side": "RIGHT",
      "body": "**warn** `plow/unused-catalog-entry`: Catalog entry 'is-even' is not referenced by any workspace package\n\n<!-- plow-fingerprint:v2: de3ed2a0e833c4b0 -->",
      "fingerprint": "de3ed2a0e833c4b0"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 9,
      "side": "RIGHT",
      "body": "**warn** `plow/unused-dependency-override`: Override \\`axios\\` forces version \\`^1.6.0\\` but \\`axios\\` is not declared by any workspace package or resolved in pnpm-lock.yaml \\(may target a transitive dependency; pnpm install --frozen-lockfile is the ground truth\\)\n\n<!-- plow-fingerprint:v2: 65639e7e9f12c73f -->",
      "fingerprint": "65639e7e9f12c73f"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 10,
      "side": "RIGHT",
      "body": "**warn** `plow/empty-catalog-group`: Catalog group 'react17' has no entries\n\n<!-- plow-fingerprint:v2: eeb511f2856ae1d9 -->",
      "fingerprint": "eeb511f2856ae1d9"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 12,
      "side": "RIGHT",
      "body": "**warn** `plow/unused-catalog-entry`: Catalog entry 'old-thing' \\(catalog 'legacy'\\) is not referenced by any workspace package\n\n<!-- plow-fingerprint:v2: 291da29e40ca77e0 -->",
      "fingerprint": "291da29e40ca77e0"
    },
    {
      "path": "src/Child.svelte",
      "line": 6,
      "side": "RIGHT",
      "body": "**warn** `plow/unused-svelte-event`: event \\`dead\\` is dispatched by component \\`Child\\` but listened to nowhere in the project \\(remove it or listen for it\\)\n\n<!-- plow-fingerprint:v2: b5004391914737c9 -->",
      "fingerprint": "b5004391914737c9"
    },
    {
      "path": "src/a.ts",
      "line": 3,
      "side": "RIGHT",
      "body": "**error** `plow/circular-dependency`: Circular dependency: src/a.ts → src/b.ts\n\n<!-- plow-fingerprint:v2: 9f70c2f1869ab63a -->",
      "fingerprint": "9f70c2f1869ab63a"
    },
    {
      "path": "src/api/index.ts",
      "line": 1,
      "side": "RIGHT",
      "body": "**warn** `plow/re-export-cycle`: Re-export cycle: src/api/index.ts \\<-\\> src/api/internal/index.ts\n\n<!-- plow-fingerprint:v2: d5108d19da1b478c -->",
      "fingerprint": "d5108d19da1b478c"
    },
    {
      "path": "src/app.ts",
      "line": 3,
      "side": "RIGHT",
      "body": "**error** `plow/unresolved-import`: Import './missing-module' could not be resolved\n\n<!-- plow-fingerprint:v2: af1eb4eb0844d085 -->",
      "fingerprint": "af1eb4eb0844d085"
    },
    {
      "path": "src/cli.ts",
      "line": 2,
      "side": "RIGHT",
      "body": "**error** `plow/unlisted-dependency`: Package 'chalk' is imported but not listed in package.json\n\n<!-- plow-fingerprint:v2: db9e8d2cbc4f7fcb -->",
      "fingerprint": "db9e8d2cbc4f7fcb"
    },
    {
      "path": "src/config.ts",
      "line": 15,
      "side": "RIGHT",
      "body": "**error** `plow/duplicate-export`: Export 'Config' appears in multiple modules\n\n<!-- plow-fingerprint:v2: 1d5f8d291b3b6fcc -->",
      "fingerprint": "1d5f8d291b3b6fcc"
    },
    {
      "path": "src/dead.ts",
      "line": 1,
      "side": "RIGHT",
      "body": "**error** `plow/unused-file`: File is not reachable from any entry point\n\n> Run `plow fix --files` or delete this file.\n\n<!-- plow-fingerprint:v2: cf1a29e15c023d0d -->",
      "fingerprint": "cf1a29e15c023d0d"
    },
    {
      "path": "src/enums.ts",
      "line": 8,
      "side": "RIGHT",
      "body": "**error** `plow/unused-enum-member`: Enum member 'Status.Deprecated' is never referenced\n\n<!-- plow-fingerprint:v2: 4fdc52289547d8e7 -->",
      "fingerprint": "4fdc52289547d8e7"
    },
    {
      "path": "src/service.ts",
      "line": 42,
      "side": "RIGHT",
      "body": "**error** `plow/unused-class-member`: Class member 'UserService.legacyMethod' is never referenced\n\n<!-- plow-fingerprint:v2: dd4d62478ebd0dea -->",
      "fingerprint": "dd4d62478ebd0dea"
    },
    {
      "path": "src/stores/counter.ts",
      "line": 24,
      "side": "RIGHT",
      "body": "**warn** `plow/unused-store-member`: Store member 'useCounterStore.legacyAction' is never referenced\n\n<!-- plow-fingerprint:v2: 1b6b9adec9797dbc -->",
      "fingerprint": "1b6b9adec9797dbc"
    },
    {
      "path": "src/types.ts",
      "line": 5,
      "side": "RIGHT",
      "body": "**error** `plow/unused-type`: Type export 'OldType' is never imported by other modules\n\n<!-- plow-fingerprint:v2: 08e7c60812746b38 -->",
      "fingerprint": "08e7c60812746b38"
    },
    {
      "path": "src/types.ts",
      "line": 30,
      "side": "RIGHT",
      "body": "**error** `plow/duplicate-export`: Export 'Config' appears in multiple modules\n\n<!-- plow-fingerprint:v2: ec485b2f5051e03e -->",
      "fingerprint": "ec485b2f5051e03e"
    },
    {
      "path": "src/useTheme.ts",
      "line": 5,
      "side": "RIGHT",
      "body": "**warn** `plow/unprovided-inject`: inject\\(\\`THEME\\_KEY\\`\\) has no matching provide\\(\\`THEME\\_KEY\\`\\) in this project; at runtime it returns undefined \\(provide the key or remove this inject\\)\n\n<!-- plow-fingerprint:v2: 4e4a7216bbdc8cfa -->",
      "fingerprint": "4e4a7216bbdc8cfa"
    },
    {
      "path": "src/user-card.component.ts",
      "line": 12,
      "side": "RIGHT",
      "body": "**warn** `plow/unused-component-input`: input \\`variant\\` is declared but referenced nowhere in component \\`UserCardComponent\\` \\(remove it or use it\\)\n\n<!-- plow-fingerprint:v2: 8a93cdfaa7cabafc -->",
      "fingerprint": "8a93cdfaa7cabafc"
    },
    {
      "path": "src/user-card.component.ts",
      "line": 15,
      "side": "RIGHT",
      "body": "**warn** `plow/unused-component-output`: output \\`selected\\` is declared but emitted nowhere in component \\`UserCardComponent\\` \\(remove it or emit it\\)\n\n<!-- plow-fingerprint:v2: d1644f190d895a1a -->",
      "fingerprint": "d1644f190d895a1a"
    },
    {
      "path": "src/utils.ts",
      "line": 10,
      "side": "RIGHT",
      "body": "**error** `plow/unused-export`: Export 'helperFn' is never imported by other modules\n\n<!-- plow-fingerprint:v2: 6b7fb5f6ae546edb -->",
      "fingerprint": "6b7fb5f6ae546edb"
    }
  ],
  "marker_regex": "^<!-- plow-fingerprint:v2: ((?:[a-z]+:)?[0-9a-f]{16}) -->\\s*$",
  "marker_regex_flags": "m",
  "meta": {
    "schema": "plow-review-envelope/v2",
    "provider": "github",
    "check_conclusion": "failure"
  }
}
