crates/cli/tests/snapshots/snapshot_tests__review_gitlab_envelope.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
{
  "body": "### Plow dead-code report\n\n20 inline findings selected for GitLab review.\n\n<!-- plow-review -->\n\n<!-- plow-fingerprint:v2: cfe228d4e40949fd -->",
  "summary": {
    "body": "### Plow dead-code report\n\n20 inline findings selected for GitLab review.\n\n<!-- plow-review -->\n\n<!-- plow-fingerprint:v2: cfe228d4e40949fd -->",
    "fingerprint": "cfe228d4e40949fd"
  },
  "comments": [
    {
      "body": "**error** `plow/misconfigured-dependency-override`: Override \\`@types/react@\\<\\<18\\` -\\> \\`18.0.0\\` is malformed: override key cannot be parsed\n\n<!-- plow-fingerprint:v2: 6c6967f2a0a29fc8 -->",
      "position": {
        "position_type": "text",
        "old_path": "package.json",
        "new_path": "package.json",
        "new_line": 3
      },
      "fingerprint": "6c6967f2a0a29fc8"
    },
    {
      "body": "**warn** `plow/unused-optional-dependency`: Package 'fsevents' is in optionalDependencies but never imported\n\n**warn** `plow/unused-dev-dependency`: Package 'jest' is in devDependencies but never imported\n\n**error** `plow/unused-dependency`: Package 'lodash' is in dependencies but never imported\n\n<!-- plow-fingerprint:v2: merged:4fc2bf7e7287da2b -->",
      "position": {
        "position_type": "text",
        "old_path": "package.json",
        "new_path": "package.json",
        "new_line": 5
      },
      "fingerprint": "merged:4fc2bf7e7287da2b"
    },
    {
      "body": "**warn** `plow/type-only-dependency`: Package 'zod' is only imported via type-only imports \\(consider moving to devDependencies\\)\n\n<!-- plow-fingerprint:v2: 3d74179acf41bda0 -->",
      "position": {
        "position_type": "text",
        "old_path": "package.json",
        "new_path": "package.json",
        "new_line": 8
      },
      "fingerprint": "3d74179acf41bda0"
    },
    {
      "body": "**warn** `plow/test-only-dependency`: Package 'msw' is only imported by test files \\(consider moving to devDependencies\\)\n\n<!-- plow-fingerprint:v2: 8c337e042e8095c8 -->",
      "position": {
        "position_type": "text",
        "old_path": "package.json",
        "new_path": "package.json",
        "new_line": 12
      },
      "fingerprint": "8c337e042e8095c8"
    },
    {
      "body": "**error** `plow/unresolved-catalog-reference`: Package 'old-react' is referenced via \\`catalog:react17\\` but catalog 'react17' does not declare it; \\`pnpm install\\` will fail \\(available in: react18\\)\n\n<!-- plow-fingerprint:v2: 5deef6f1aba529f1 -->",
      "position": {
        "position_type": "text",
        "old_path": "packages/app/package.json",
        "new_path": "packages/app/package.json",
        "new_line": 14
      },
      "fingerprint": "5deef6f1aba529f1"
    },
    {
      "body": "**warn** `plow/unused-catalog-entry`: Catalog entry 'is-even' is not referenced by any workspace package\n\n<!-- plow-fingerprint:v2: de3ed2a0e833c4b0 -->",
      "position": {
        "position_type": "text",
        "old_path": "pnpm-workspace.yaml",
        "new_path": "pnpm-workspace.yaml",
        "new_line": 6
      },
      "fingerprint": "de3ed2a0e833c4b0"
    },
    {
      "body": "**warn** `plow/unused-dependency-override`: Override \\`axios\\` forces version \\`^1.6.0\\` but \\`axios\\` is not declared by any workspace package or resolved in pnpm-lock.yaml \\(may target a transitive dependency; pnpm install --frozen-lockfile is the ground truth\\)\n\n<!-- plow-fingerprint:v2: 65639e7e9f12c73f -->",
      "position": {
        "position_type": "text",
        "old_path": "pnpm-workspace.yaml",
        "new_path": "pnpm-workspace.yaml",
        "new_line": 9
      },
      "fingerprint": "65639e7e9f12c73f"
    },
    {
      "body": "**warn** `plow/empty-catalog-group`: Catalog group 'react17' has no entries\n\n<!-- plow-fingerprint:v2: eeb511f2856ae1d9 -->",
      "position": {
        "position_type": "text",
        "old_path": "pnpm-workspace.yaml",
        "new_path": "pnpm-workspace.yaml",
        "new_line": 10
      },
      "fingerprint": "eeb511f2856ae1d9"
    },
    {
      "body": "**warn** `plow/unused-catalog-entry`: Catalog entry 'old-thing' \\(catalog 'legacy'\\) is not referenced by any workspace package\n\n<!-- plow-fingerprint:v2: 291da29e40ca77e0 -->",
      "position": {
        "position_type": "text",
        "old_path": "pnpm-workspace.yaml",
        "new_path": "pnpm-workspace.yaml",
        "new_line": 12
      },
      "fingerprint": "291da29e40ca77e0"
    },
    {
      "body": "**error** `plow/circular-dependency`: Circular dependency: src/a.ts → src/b.ts\n\n<!-- plow-fingerprint:v2: 9f70c2f1869ab63a -->",
      "position": {
        "position_type": "text",
        "old_path": "src/a.ts",
        "new_path": "src/a.ts",
        "new_line": 3
      },
      "fingerprint": "9f70c2f1869ab63a"
    },
    {
      "body": "**warn** `plow/re-export-cycle`: Re-export cycle: src/api/index.ts \\<-\\> src/api/internal/index.ts\n\n<!-- plow-fingerprint:v2: d5108d19da1b478c -->",
      "position": {
        "position_type": "text",
        "old_path": "src/api/index.ts",
        "new_path": "src/api/index.ts",
        "new_line": 1
      },
      "fingerprint": "d5108d19da1b478c"
    },
    {
      "body": "**error** `plow/unresolved-import`: Import './missing-module' could not be resolved\n\n<!-- plow-fingerprint:v2: af1eb4eb0844d085 -->",
      "position": {
        "position_type": "text",
        "old_path": "src/app.ts",
        "new_path": "src/app.ts",
        "new_line": 3
      },
      "fingerprint": "af1eb4eb0844d085"
    },
    {
      "body": "**error** `plow/unlisted-dependency`: Package 'chalk' is imported but not listed in package.json\n\n<!-- plow-fingerprint:v2: db9e8d2cbc4f7fcb -->",
      "position": {
        "position_type": "text",
        "old_path": "src/cli.ts",
        "new_path": "src/cli.ts",
        "new_line": 2
      },
      "fingerprint": "db9e8d2cbc4f7fcb"
    },
    {
      "body": "**error** `plow/duplicate-export`: Export 'Config' appears in multiple modules\n\n<!-- plow-fingerprint:v2: 1d5f8d291b3b6fcc -->",
      "position": {
        "position_type": "text",
        "old_path": "src/config.ts",
        "new_path": "src/config.ts",
        "new_line": 15
      },
      "fingerprint": "1d5f8d291b3b6fcc"
    },
    {
      "body": "**error** `plow/unused-file`: File is not reachable from any entry point\n\n> Run `plow fix --files` or delete this file.\n\n<!-- plow-fingerprint:v2: cf1a29e15c023d0d -->",
      "position": {
        "position_type": "text",
        "old_path": "src/dead.ts",
        "new_path": "src/dead.ts",
        "new_line": 1
      },
      "fingerprint": "cf1a29e15c023d0d"
    },
    {
      "body": "**error** `plow/unused-enum-member`: Enum member 'Status.Deprecated' is never referenced\n\n<!-- plow-fingerprint:v2: 4fdc52289547d8e7 -->",
      "position": {
        "position_type": "text",
        "old_path": "src/enums.ts",
        "new_path": "src/enums.ts",
        "new_line": 8
      },
      "fingerprint": "4fdc52289547d8e7"
    },
    {
      "body": "**error** `plow/unused-class-member`: Class member 'UserService.legacyMethod' is never referenced\n\n<!-- plow-fingerprint:v2: dd4d62478ebd0dea -->",
      "position": {
        "position_type": "text",
        "old_path": "src/service.ts",
        "new_path": "src/service.ts",
        "new_line": 42
      },
      "fingerprint": "dd4d62478ebd0dea"
    },
    {
      "body": "**error** `plow/unused-type`: Type export 'OldType' is never imported by other modules\n\n<!-- plow-fingerprint:v2: 08e7c60812746b38 -->",
      "position": {
        "position_type": "text",
        "old_path": "src/types.ts",
        "new_path": "src/types.ts",
        "new_line": 5
      },
      "fingerprint": "08e7c60812746b38"
    },
    {
      "body": "**error** `plow/duplicate-export`: Export 'Config' appears in multiple modules\n\n<!-- plow-fingerprint:v2: ec485b2f5051e03e -->",
      "position": {
        "position_type": "text",
        "old_path": "src/types.ts",
        "new_path": "src/types.ts",
        "new_line": 30
      },
      "fingerprint": "ec485b2f5051e03e"
    },
    {
      "body": "**error** `plow/unused-export`: Export 'helperFn' is never imported by other modules\n\n<!-- plow-fingerprint:v2: 6b7fb5f6ae546edb -->",
      "position": {
        "position_type": "text",
        "old_path": "src/utils.ts",
        "new_path": "src/utils.ts",
        "new_line": 10
      },
      "fingerprint": "6b7fb5f6ae546edb"
    }
  ],
  "marker_regex": "^<!-- plow-fingerprint:v2: ((?:[a-z]+:)?[0-9a-f]{16}) -->\\s*$",
  "marker_regex_flags": "m",
  "meta": {
    "schema": "plow-review-envelope/v2",
    "provider": "gitlab"
  }
}
